# anamnesis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RECOVERY.md  SETUP.md  pyproject.toml
anamnesis/: __init__.py  audit.py  backup.py  cli.py  config.py  db.py  decay.py  entities.py  graph.py  importance.py  restore.py  summarize.py  threading.py  verify.py
anamnesis/daemon/: mcp_server.py
anamnesis/eval/: run.py
anamnesis/indexers/: incremental_chroma.py
anamnesis/ingest/: incremental.py  parsers.py  recover_main.py  vscode_copilot.py
anamnesis/search/: hybrid.py  rerank.py  temporal.py
anamnesis/sync/: cross.py
anamnestic/: __init__.py  audit.py  backup.py  capabilities.py  chroma_store.py  cli.py  config.py  db.py  decay.py  entities.py  graph.py  importance.py  restore.py  summarize.py  threading.py  verify.py
anamnestic/daemon/: mcp_server.py
anamnestic/eval/: golden.yaml  run.py
anamnestic/indexers/: incremental_chroma.py
anamnestic/ingest/: incremental.py  recover_main.py  vscode_copilot.py
anamnestic/migrations/: 001_fts_and_unique.sql  002_incremental_state.sql  004_rename_to_anamnestic.sql  006_purge_legacy_subagent_csid.sql  007_entities.sql  011_decay.sql  012_entity_graph.sql  015_repair_entity_graph_schema.sql
anamnestic/search/: hybrid.py  rerank.py  temporal.py
anamnestic/sync/: cross.py
docs/: architecture.dot
mem_ext/: audit.py  backup.py  cli.py  db.py  restore.py  verify.py
mem_ext/eval/: golden.yaml  run.py
mem_ext/ingest/: incremental.py
migrations/: 000_core_schema.sql  002_incremental_state.sql  003_audit_log.sql  004_rename_to_anamnesis.sql  005_ingest_errors_and_peers.sql  006_purge_legacy_subagent_csid.sql  007_entities.sql  008_session_threads.sql  009_importance_score.sql  010_summary_indexing.sql  011_decay.sql  012_entity_graph.sql  013_repair_summary_columns.sql  014_repair_graph_state.sql
scripts/: anamnesis.sh  anamnestic.sh  mcp_server.sh
systemd/: anamnesis-backup.service  anamnesis-backup.timer  anamnesis-cross-sync.service  anamnesis-cross-sync.timer  anamnesis-sync.service  anamnesis-sync.timer  anamnesis-verify.service  anamnesis-verify.timer  anamnestic-backup.service  anamnestic-backup.timer  anamnestic-cross-sync.service  anamnestic-cross-sync.timer  anamnestic-sync.service  anamnestic-sync.timer  anamnestic-verify.service  anamnestic-verify.timer  claude-mem-worker.service  mem-ext-backup.service  mem-ext-backup.timer  mem-ext-sync.service  mem-ext-sync.timer
tests/: test_cli.py  test_db_migrations.py  test_decay.py  test_entities.py  test_graph.py  test_hybrid.py  test_importance.py  test_mcp_server.py  test_packaging.py  test_parsers.py  test_rerank.py  test_search_integration.py  test_semantic_optional.py  test_summarize.py  test_temporal.py  test_threading.py
