[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anamnesis"
dynamic = ["version"]
description = "Персистентная память для AI CLI сессий — гибридный поиск по истории разговоров"
readme = "SETUP.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "xomyachok-shaolin"},
]

dependencies = [
    "chromadb>=0.4",
    "fastembed>=0.6",
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
anamnesis = "anamnesis.cli:main"

[tool.setuptools.dynamic]
version = {attr = "anamnesis.__version__"}

[tool.setuptools.packages.find]
include = ["anamnesis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
