[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anamnestic"
dynamic = ["version"]
description = "Persistent hybrid-search memory for AI CLI sessions (Claude Code, Codex, any turn-based jsonl)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["memory", "search", "mcp", "claude", "codex", "rag", "hybrid-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
authors = [
    {name = "xomyachok-shaolin"},
]
dependencies = [
    "mcp>=1.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/xomyachok-shaolin/anamnestic"
Repository = "https://github.com/xomyachok-shaolin/anamnestic"
Issues = "https://github.com/xomyachok-shaolin/anamnestic/issues"

[project.optional-dependencies]
semantic = [
    "chromadb==0.5.23",
    "fastembed==0.5.1",
    "onnxruntime==1.24.4",
    "posthog<4",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
anamnestic = "anamnestic.cli:main"

[tool.setuptools.dynamic]
version = {attr = "anamnestic.__version__"}

[tool.setuptools.packages.find]
include = ["anamnestic*"]

[tool.setuptools.package-data]
anamnestic = ["migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
